--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,30 @@
 {
     "name": "mojoblanco/domainos",
+    "type": "package",
     "description": "A laravel package for allowing or blocking specific email domains",
+    "keywords": [
+        "laravel",
+        "mojoblanco",
+        "domains",
+        "security",
+        "emails"
+    ],
+    "homepage": "https://github.com/mojoblanco/domainos",
     "license": "MIT",
     "authors": [
         {
-            "name": "John Olawale",
-            "email": "mojoblanco@gmail.com"
+            "name": ":John Olawale",
+            "email": "mojoblanco@gmail.com",
+            "homepage": "http://grienberg.com",
+            "role": "Developer"
         }
     ],
-    "minimum-stability": "dev",
-    "require": {}
+    "require": {
+        "php" : "~5.6|~7.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "Mojoblanco\\Domainos\\": "src"
+        }
+    }
 }
