updated author info

--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
         {
             "name": ":John Olawale",
             "email": "mojoblanco@gmail.com",
-            "homepage": "http://grienberg.com",
-            "role": "Developer"
+            "homepage": "http://mojizze.com",
+            "role": "Software Developer"
         }
     ],
     "require": {
